# oh-my-theme

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
oh_my_theme/: __init__.py  config.py  editor.py  main.py  preview.py  repositories.py  search.py
src/omt/: __init__.py  main.py  repositories.py  search.py
