[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
name = "oh-my-theme"
version = "2.0.0"
description = "Terminal-based theme manager for Oh My Posh with preview, search, custom repositories, and theme customization"
readme = "README.md"
keywords = [
    "bash",
    "color-editor",
    "customization",
    "fish",
    "git",
    "oh-my-posh",
    "prompt",
    "search",
    "shell",
    "terminal",
    "theme",
    "zsh",
]
license = "MIT"
maintainers = [
    { name = "Accidentallystable", email = "accidentallystable@proton.com" },
]
authors = [
    { name = "AccidentallyStable", email = "accidentallystable@proton.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = ["windows-curses>=2.4.1; platform_system=='Windows'"]

optional-dependencies.dev = [
    "black",
    "flake8",
    "mypy",
    "pytest>=6",
    "pytest-cov",
]
urls.Documentation = "https://github.com/mikeisfree/oh-my-theme#readme"
urls.Homepage = "https://github.com/mikeisfree/oh-my-theme"
urls.Issues = "https://github.com/mikeisfree/oh-my-theme/issues"
urls.Repository = "https://github.com/mikeisfree/oh-my-theme"
scripts.omt = "omt.main:main"

[tool.setuptools]
packages = ["omt"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
omt = ["*.py"]

[tool.black]
line-length = 88

[tool.ruff]
fix = true
lint.select = ["ALL"]
lint.ignore = ["COM812", "D203", "D213"]
lint.fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
